* Fixed duplicate `rel=lightbox[]` tags being generated. * Fixed IE 6 specific stylesheets - should provide correct headers for php based css documents.  * AlphaImageLoader should automatically be configure for old verions of IE - 6 or less * As of this version IE 6 or less are no longer supported.  * If you are using IE 6 or less it is recommended that you upgrade your browser. * Added option to auto-lightbox text links to images * Updated `admin.css` and `admin-html.php` to correct a top level class that may effect global styles. * Now works correctly with WordPress MU  * Tested with WordPress MU 2.9.2 * Degradation of performance in Firefox corrected.  May still occur in older versions  * Note: with the release of Firefox 3.0.19 the 3.0.x branch of Firefox will reach its end of life on March 30, 2010
git-svn-id: https://plugins.svn.wordpress.org/lightbox-plus/trunk@219232 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -121,7 +121,7 @@ a.togbox:hover {
   text-align:left;
   display:none;
 }
-input {
+.lbp input {
   max-width:500px;
 }
 .lbp-elements {
