--- a/css/shadowed/colorbox.css
+++ b/css/shadowed/colorbox.css
@@ -12,7 +12,6 @@
 #cboxTitle{margin:0;}
 #cboxLoadingOverlay, #cboxLoadingGraphic{position:absolute; top:0; left:0; width:100%;}
 #cboxPrevious, #cboxNext, #cboxClose, #cboxSlideshow{cursor:pointer;}
-
 /* 
     ColorBox example user style
     The following rules are ordered and tabbed in a way that represents the
@@ -30,8 +29,8 @@
     #cboxMiddleLeft{width:25px; background:url(images/border2.png) 0 0 repeat-y;}
     #cboxMiddleRight{width:25px; background:url(images/border2.png) -25px 0 repeat-y;}
     #cboxContent{background:#fff;}
-        #cboxLoadedContent{margin-bottom:20px;}
-        #cboxTitle{position:absolute; bottom:0px; left:0; text-align:center; width:100%; color:#999;}
+        #cboxLoadedContent{margin-bottom:20px; }
+        #cboxTitle{position:absolute; bottom:0px; left:0; text-align:center; width:100%; color:#999; }
         #cboxCurrent{position:absolute; bottom:0px; left:100px; color:#999;}
         #cboxSlideshow{position:absolute; bottom:0px; right:42px; color:#444;}
         #cboxPrevious{position:absolute; bottom:0px; left:0; color:#444;}
@@ -39,21 +38,4 @@
         #cboxLoadingOverlay{background:url(images/loading.gif) 5px 5px no-repeat #fff;}
         #cboxClose{position:absolute; bottom:0; right:0; display:block; color:#444;}
 
-/*
-    The following fixes png-transparency for IE6.  
-    It is also necessary for png-transparency in IE7 & IE8 to avoid 'black halos' with the fade transition
-    
-    Since this method does not support CSS background-positioning, it is incompatible with CSS sprites.
-    Colorbox preloads navigation hover classes to account for this.
-    
-    !! Important Note: AlphaImageLoader src paths are relative to the HTML document,
-    while regular CSS background images are relative to the CSS document.
-*/
-.cboxIE #cboxTopLeft{background:transparent; filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://www.23systems.net/wp-content/plugins/lightbox-plus/css/shadowed/images/internet_explorer/borderTopLeft.png', sizingMethod='scale');}
-.cboxIE #cboxTopCenter{background:transparent; filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://www.23systems.net/wp-content/plugins/lightbox-plus/css/shadowed/images/internet_explorer/borderTopCenter.png', sizingMethod='scale');}
-.cboxIE #cboxTopRight{background:transparent; filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://www.23systems.net/wp-content/plugins/lightbox-plus/css/shadowed/images/internet_explorer/borderTopRight.png', sizingMethod='scale');}
-.cboxIE #cboxBottomLeft{background:transparent; filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://www.23systems.net/wp-content/plugins/lightbox-plus/css/shadowed/images/internet_explorer/borderBottomLeft.png', sizingMethod='scale');}
-.cboxIE #cboxBottomCenter{background:transparent; filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://www.23systems.net/wp-content/plugins/lightbox-plus/css/shadowed/images/internet_explorer/borderBottomCenter.png', sizingMethod='scale');}
-.cboxIE #cboxBottomRight{background:transparent; filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://www.23systems.net/wp-content/plugins/lightbox-plus/css/shadowed/images/internet_explorer/borderBottomRight.png', sizingMethod='scale');}
-.cboxIE #cboxMiddleLeft{background:transparent; filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://www.23systems.net/wp-content/plugins/lightbox-plus/css/shadowed/images/internet_explorer/borderMiddleLeft.png', sizingMethod='scale');}
-.cboxIE #cboxMiddleRight{background:transparent; filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='http://www.23systems.net/wp-content/plugins/lightbox-plus/css/shadowed/images/internet_explorer/borderMiddleRight.png', sizingMethod='scale');}
+
